--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,17 +38,40 @@ test:
       - target/surefire-reports/  # Local onde os relatórios de testes são armazenados.
     expire_in: 1 hour  # Configura para os artefatos expirarem após 1 hora.
 
-# Job de deploy que realiza a implantação da aplicação na instância EC2. 
+# Job de deploy que realiza a implantação da aplicação na instância EC2.
 deploy:
-  stage: deploy
+  stage: deploy  # Define que este job faz parte do estágio 'deploy' no pipeline.
   script:
-    - mkdir -p ~/.ssh
-    - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-    - chmod 600 ~/.ssh/id_rsa
-    - scp -i ~/.ssh/id_rsa target/your-app.jar ec2-user@$EC2_HOST:/home/ec2-user/
-    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "java -jar /home/ec2-user/your-app.jar"
+    # Cria o diretório .ssh no diretório home do usuário, se não existir.
+    - mkdir -p ~/.ssh  
+    
+    # Adiciona a chave privada SSH à pasta .ssh, salvando-a no arquivo id_rsa.
+    # A variável de ambiente $id_rsa_gitlab deve conter a chave privada no formato PEM.
+    - echo "$id_rsa_gitlab" > ~/.ssh/id_rsa  
+    
+    # Define as permissões do arquivo id_rsa para que apenas o dono possa ler e escrever no arquivo.
+    # Isso é essencial para garantir a segurança da chave privada.
+    - chmod 600 ~/.ssh/id_rsa  
+    
+    # Adiciona a chave pública do host remoto ao arquivo known_hosts para evitar a confirmação manual do fingerprint do host.
+    - ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts  
+    
+    # Copia o arquivo JAR (your-app.jar) da pasta target no repositório para o diretório /home/ec2-user/
+    # na instância EC2, utilizando a chave privada para autenticação.
+    - scp -i ~/.ssh/id_rsa target/your-app.jar ec2-user@$EC2_HOST:/home/ec2-user/  
+    
+    # Conecta-se à instância EC2 via SSH e executa o comando para iniciar o arquivo JAR.
+    # A chave privada é utilizada para autenticação e o comando java -jar é usado para rodar a aplicação.
+    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "java -jar /home/ec2-user/your-app.jar"  
+    
   environment:
-    name: production
-    url: http://your-production-url.com
+    # Define o nome do ambiente para o deploy. Isso ajuda a identificar o ambiente onde a aplicação está sendo implantada.
+    name: production  
+    
+    # URL onde a aplicação estará acessível após o deploy. Isso pode ser usado para monitorar o status da aplicação.
+    url: http://your-production-url.com  
+    
   only:
-    - main
+    # Especifica que este job deve ser executado apenas quando a branch 'main' for atualizada.
+    # Isso garante que o deploy só aconteça nas versões finais e estáveis do código.
+    - main  
