--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,11 +38,13 @@ deploy:
     - echo "$id_rsa_gitlab" > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     - ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
-    - ls -la target/  # Verifica se o arquivo está presente
-    - scp -i ~/.ssh/id_rsa target/your-app.jar ec2-user@$EC2_HOST:/home/ec2-user/
-    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "java -jar /home/ec2-user/your-app.jar"
+    - ls -la target/
+    # Atualize o nome do arquivo JAR aqui
+    - scp -i ~/.ssh/id_rsa target/betApi-0.0.1-SNAPSHOT.jar ec2-user@$EC2_HOST:/home/ec2-user/
+    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "java -jar /home/ec2-user/betApi-0.0.1-SNAPSHOT.jar"
   environment:
     name: production
     url: http://your-production-url.com
   only:
     - main
+
