--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configuração do Datasource
-spring.datasource.url=jdbc:postgresql://database-1.c146o8wia4k6.us-east-1.rds.amazonaws.com:5432/database-1
+spring.datasource.url=jdbc:postgresql://bet-database.c146o8wia4k6.us-east-1.rds.amazonaws.com:5432/bet-database
 spring.datasource.username=postgres
 spring.datasource.password=R7v!k9pZ8
 spring.datasource.driver-class-name=org.postgresql.Driver
