--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuração do Datasource
 spring.datasource.url=jdbc:postgresql://bet-database.c146o8wia4k6.us-east-1.rds.amazonaws.com:5432/bet-database
 spring.datasource.username=postgres
-spring.datasource.password=R7v!k9pZ8
+spring.datasource.password=bet-database-rds
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuração do Hibernate
