--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,9 +39,11 @@ deploy:
     - chmod 600 ~/.ssh/id_rsa
     - ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
     - ls -la target/
-    # Atualize o nome do arquivo JAR aqui
     - scp -i ~/.ssh/id_rsa target/betApi-0.0.1-SNAPSHOT.jar ec2-user@$EC2_HOST:/home/ec2-user/
-    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "java -jar /home/ec2-user/betApi-0.0.1-SNAPSHOT.jar"
+    # Execute a aplicação em background e redirecione logs
+    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "nohup java -jar /home/ec2-user/betApi-0.0.1-SNAPSHOT.jar > /home/ec2-user/app.log 2>&1 &"
+    # Verifique as últimas linhas do log para garantir que a aplicação iniciou corretamente
+    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "tail -n 10 /home/ec2-user/app.log"
   environment:
     name: production
     url: http://your-production-url.com
