--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,19 +40,16 @@ deploy:
     - ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
     - ls -la target/
     - scp -i ~/.ssh/id_rsa target/betApi-0.0.1-SNAPSHOT.jar ec2-user@$EC2_HOST:/home/ec2-user/
-    # Verificar se a aplicação Java está rodando
-    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "ps aux | grep java"
-    # Parar a aplicação Java se estiver rodando
-    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "pkill -f 'java -jar /home/ec2-user/betApi-0.0.1-SNAPSHOT.jar' || true"
-    # Iniciar a nova aplicação em background e redirecionar logs
+    # Execute a aplicação em background e redirecione logs
     - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "nohup java -jar /home/ec2-user/betApi-0.0.1-SNAPSHOT.jar > /home/ec2-user/app.log 2>&1 &"
-    # Verificar as últimas linhas do log para garantir que a aplicação iniciou corretamente
-    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "tail -n 10 /home/ec2-user/app.log"
+    # Acompanhe os logs em tempo real
+    - ssh -i ~/.ssh/id_rsa ec2-user@$EC2_HOST "tail -f /home/ec2-user/app.log"
   environment:
     name: production
     url: http://your-production-url.com
   only:
     - main
+
 
 
 
