Ajuste projeto github

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-# Configura√ß√£o do Datasource
-spring.datasource.url=jdbc:postgresql://bet-database.c146o8wia4k6.us-east-1.rds.amazonaws.com:5432/bet-database
-spring.datasource.username=postgres
-spring.datasource.password=bet-database-rds
-spring.datasource.driver-class-name=org.postgresql.Driver
+# ConfiguraÁ„o do Datasource utilizando vari·veis de ambiente para maior flexibilidade
+
+# URL do banco de dados. A vari·vel de ambiente DB_URL ser· usada se definida; caso contr·rio, ser· utilizado o valor padr„o.
+spring.datasource.url=${DB_URL:jdbc:postgresql://default-url:5432/default-db}
+
+# Nome de usu·rio do banco de dados. A vari·vel de ambiente DB_USERNAME ser· usada, ou um valor padr„o se n„o estiver definida.
+spring.datasource.username=${DB_USERNAME:default-username}
+
+# Senha do banco de dados. A vari·vel de ambiente DB_PASSWORD ser· usada, ou um valor padr„o se n„o estiver definida.
+spring.datasource.password=${DB_PASSWORD:default-password}
+
+# Classe do driver JDBC. A vari·vel de ambiente DB_DRIVER ser· usada, ou o driver padr„o do PostgreSQL se n„o estiver definida.
+spring.datasource.driver-class-name=${DB_DRIVER:org.postgresql.Driver}
+
 
 # Configura√ß√£o do Hibernate
 spring.jpa.properties.hibernate.show_sql=false
